# src/modules/lists/lists.controller.ts
@@ -1,32 +1,44 @@
 import { List } from '@prisma/client';
-import { Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags } from 'tsoa';
+import { Body, Controller, Delete, Get, Patch, Path, Post, Route, Security, Tags, Request } from 'tsoa';
 import { ListRequest, createList, deleteList, getList, getLists, updateList } from './lists.service';
 
 @Route('/lists')
 @Tags('Lists')
 export class ListsController extends Controller {
+  @Security('jwt', ['lists:read'])
   @Get()
   async getLists(): Promise<List[]> {
     return getLists();
   }
 
-  @Post()
-  async createList(@Body() { title, userId }: ListRequest): Promise<List> {
-    return createList({ title, userId });
-  }
-
+  @Security('jwt', ['lists:read'])
   @Get('{id}')
   async getList(@Path() id: string): Promise<List> {
     return getList(id);
   }
 
-  @Patch('{id}')
-  async updateList(@Path() id: string, @Body() { title, userId }: ListRequest): Promise<List> {
-    return updateList(id, { title, userId });
+  @Security('jwt', ['lists:write'])
+  @Post()
+  async createList(@Request() request: { user_id: string }, @Body() { title }: ListRequest): Promise<List> {
+    const { user_id } = request;
+    return createList(user_id, { title });
   }
 
+  @Security('jwt', ['lists:write'])
+  @Patch('{id}')
+  async updateList(
+    @Request() request: { user_id: string },
+    @Path() id: string,
+    @Body() { title }: ListRequest
+  ): Promise<List> {
+    const { user_id } = request;
+    return updateList(user_id, id, { title });
+  }
+
+  @Security('jwt', ['lists:write'])
   @Delete('{id}')
-  async deleteList(@Path() id: string): Promise<{ deleted: boolean }> {
-    return deleteList(id);
+  async deleteList(@Request() request: { user_id: string }, @Path() id: string): Promise<{ deleted: boolean }> {
+    const { user_id } = request;
+    return deleteList(user_id, id);
   }
 }
